--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     </table>
   <hr />
 
-  <a href="\hobbies.html">My Hobbies</a>
+  <a href="hobbies.html">My Hobbies</a>
   <br />
-  <a href="C:\Users\Lenovo\OneDrive\Documents\web devolopment\HTML - Personal Site\contact-me.html">Contact</a>
+  <a href="contact-me.html">Contact</a>
   </p>
 
 
